turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:5: error: ambiguous reference to overloaded definition,
both method / in class Int of type (x: Char)Int
and  method / in class Int of type (x: Byte)Int
match expected type ?
    right(360./nb);
              ^