turtleart.polygon7.Polygon7.scala.code
override def run() {
  val nb = 7 ;
  for (i <- 1 to nb) {
    forward(80);
    right(360./nb);
  }
}